--- a/templates/index.html
+++ b/templates/index.html
@@ -103,6 +103,11 @@
       </div>
       {% endfor %}
     </div>
+    <div class="actions">
+  <a href="/upload">+ Add New Product</a>
+  <a href="/export" style="background:#6c757d;">Export CSV</a>
+</div>
+
   </div>
 </body>
 </html>
